# stylish_cmake_parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  parse_cmake  parse_cmake2  parse_cmakes  pyproject.toml  test_local
.github/workflows/: main.yaml
src/stylish_cmake_parser/: __init__.py  command.py  command_group.py  command_sequence.py  element.py  parse.py  parser.py  scanner.py  section.py
stylish_cmake_parser/: __init__.py  command.py  command_group.py  command_sequence.py  parse.py  parser.py  scanner.py  section.py
test/: test_bad_parses.py  test_build_rules.py  test_construction.py  test_editing.py  test_parsing.py  test_script.py  test_variables.py
test/bad_data/: leftover.txt  unbalanced.txt  unmatched.txt  unresolved.txt
test/data/: basic.txt  constructed.txt  escapees.txt  nested.txt  trailing_comment.txt
